# Agent-AI

./: .env  main.py  pyproject.toml  todos.json
01_llm_basics/: 01_gemeni_llm.py  02_gemeni_llm_stream.py
02_llm_fastapi/: 01_gemeni_fastapi.py
03_llm_settings/: 01_llm_temperature.py
04_openai_models/: 01_basic_agent.py  02_agent_func_calculator_bill.py
